...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="p9c-DC-GAa" id="OoQ-i8-gDd"/>
                            <outlet property="delegate" destination="p9c-DC-GAa" id="Y6a-I4-g90"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Каталог" id="cZu-yJ-Yyd"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Hy6-9T-6jB" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1679.2" y="-657.12143928035982"/>
        </scene>
        <!--Navigation Controller-->
...
